@@ -286,7 +286,7 @@ S=\set{
 </equation>
 linearly independent or linearly dependent?</p>
 
-<p><acroref type="theorem" acro="LIVHS" /> suggests we place these vectors into a matrix as columns and analyze the row-reduced version of the matrix,
+<p><acroref type="theorem" acro="LIVRN" /> suggests we place these vectors into a matrix as columns and analyze the row-reduced version of the matrix,
 <equation>
 \begin{bmatrix}
 <![CDATA[2 & 9 & 1 & -3 & 6\\]]>
@@ -310,7 +310,7 @@ linearly independent or linearly dependent?</p>
 
 <p>Now we need only compute that
 <![CDATA[$r=4<5=n$]]>
-to recognize, via <acroref type="theorem" acro="LIVHS" /> that $S$ is a linearly dependent set.  Boom!</p>
+to recognize, via <acroref type="theorem" acro="LIVRN" /> that $S$ is a linearly dependent set.  Boom!</p>
 
 </example>
 
@@ -333,7 +333,7 @@ R=\set{
 </equation>
 </p>
 
-<p>To employ <acroref type="theorem" acro="LIVHS" />, we form a $4\times 9$ coefficient matrix, $C$,
+<p>To employ <acroref type="theorem" acro="LIVHS" />, we form a $4\times 9$ matrix, $C$, whose columns are the vectors in $B$
 <equation>
 C=
 \begin{bmatrix}
@@ -345,7 +345,8 @@ C=
 </equation>
 </p>
 
-<p>To determine if the homogeneous system $\linearsystem{C}{\zerovector}$ has a unique solution or not, we would normally row-reduce this matrix.  But in this particular example, we can do better.  <acroref type="theorem" acro="HMVEI" /> tells us that since the system is homogeneous with $n=9$ variables in $m=4$ equations, and $n>m$, there must be infinitely many solutions.  Since there is not a unique solution, <acroref type="theorem" acro="LIVHS" /> says the set is linearly dependent.
+<!-- Can do quicker with LIVRN and counting, but want to use HMVEI -->
+<p>To determine if the homogeneous system $\homosystem{C}$ has a unique solution or not, we would normally row-reduce this matrix.  But in this particular example, we can do better.  <acroref type="theorem" acro="HMVEI" /> tells us that since the system is homogeneous with $n=9$ variables in $m=4$ equations, and $n>m$, there must be infinitely many solutions.  Since there is not a unique solution, <acroref type="theorem" acro="LIVHS" /> says the set is linearly dependent.
 </p>
 
 </example>
@@ -353,17 +354,15 @@ C=
 <p>The situation in <acroref type="example" acro="LLDS" /> is slick enough to warrant formulating as a theorem.
 </p>
 
+<!-- See note on Example above -->
 <theorem acro="MVSLD" index="linear dependence!more vectors than size">
 <title>More Vectors than Size implies Linear Dependence</title>
 <statement>
-<p>Suppose that $S=\set{\vectorlist{u}{n}}$ is the set of vectors in $\complex{m}$, and that
-$n>m$.
-Then $S$ is a linearly dependent set.</p>
-
+<p>Suppose that $S=\set{\vectorlist{u}{n}}\subseteq\complex{m}$ and $n>m$. Then $S$ is a linearly dependent set.</p>
 </statement>
 
 <proof>
-<p>Form the $m\times n$ coefficient matrix $A$ that has the column vectors $\vect{u}_i$, $1\leq i\leq n$ as its columns.  Consider the homogeneous system $\homosystem{A}$.  By <acroref type="theorem" acro="HMVEI" /> this system has infinitely many solutions.  Since the system does not have a unique solution, <acroref type="theorem" acro="LIVHS" /> says the columns of $A$ form a linearly dependent set, which is the desired conclusion.
+<p>Form the $m\times n$ matrix $A$ whose columns are $\vect{u}_i$, $1\leq i\leq n$.  Consider the homogeneous system $\homosystem{A}$.  By <acroref type="theorem" acro="HMVEI" /> this system has infinitely many solutions.  Since the system does not have a unique solution, <acroref type="theorem" acro="LIVHS" /> says the columns of $A$ form a linearly dependent set, as desired.
 </p>
 
 </proof>
