@@ -8,7 +8,9 @@ Change: Prefer "pivot columns" over "leading 1", Chapter SLE
 Typo: C^n in statement of Theorem SLSLC
 Typo: Section LI, "scenees" (Jenna Fontaine)
 Typo: Section LI, "in linearly independent" (Becky Hanscam)
-
+Typo: Example LDRN, use Theorem LIVRN as justification (Anna Dovzhik)
+                                                
+                                                    
 v3.10 2013/08/20
 ~~~~~~~~~~~~~~~~
 New:  Exercise MM.T12, Theorem HMIP reprised
